<resources>
    <string name="app_name">WeerwolvenHulp</string>
    <string name="welcome_message">Welkom bij de Weerwolven Hulp</string>
    <string name="welcome_description">Om te beginnen, maak een nieuw spel aan met de onderstaande knop.</string>
    <string name="new_game">Nieuw spel</string>
    <string name="pick_cards">Kies je kaarten</string>
    <string name="werewolf_name">Weerwolf</string>
    <string name="citizen_name">Burger / Dorpeling</string>
    <string name="seer_name">Ziener</string>
    <string name="witch_name">Heks</string>
    <string name="hunter_name">Jager</string>
    <string name="cheating_girl_name">Spiekende Meisje</string>
    <string name="thief_name">Dief</string>
    <string name="cupid_name">Cupido</string>
    <string name="start_text">Start!</string>
    <string name="new_game_top_text">Nieuw spel gestart.</string>
    <string name="start_new_day">Start volgende dag!</string>
    <string name="start_new_night">Start volgende nacht!</string>
    <string name="selected_text">%1$d van de %2$d geselecteerd</string>
    <string name="player_config_header">Speler Configuratie</string>
    <string name="player_config_description">Hieronder komen alle namen 1 voor 1 voorbij. Onder de naam verschijnt een willekeurig gekozen rol. Geef deze rol aan de desbetreffende speler. Je hoeft dus niet meer zelf kaartjes te schudden en uit te delen!</string>
    <string name="player_name_placeholder">Naam…</string>
    <string name="player_config_next_player">Volgende speler</string>
    <string name="player_config_counter">Aantal %1$d / %2$d</string>
    <string name="player_setup_header">Speler Setup</string>
    <string name="player_setup_description">Vul hieronder de namen in van de spelers die meedoen. Druk op de Enter / Return toets om de naam op te slaan. Je moet minimaal 4 spelers hebben om een spel te kunnen starten. \'Lege\' namen en dubbelen zijn niet toegestaan.</string>
    <string name="done">Klaar!</string>
    <string name="player_setup_counter">Totaal aantal spelers : %1$d</string>
    <string name="card_setup_description">Selecteer hieronder de kaarten die meedoen aan deze ronde. Van sommige kaarten kunnen meerdere worden geselecteerd. Deze kaarten kunnen weer op 0 worden gezet door de kaart ingedrukt te houden. Natuurlijk moet je minstens 1 weerwolf in het spel hebben.</string>
    <string name="night_started_event">Nacht %1$d is begonnen.</string>
    <string name="day_started_event">Dag %1$d is begonnen.</string>
    <string name="elect_mayor_event_description">Roep een stemming uit voor een nieuwe burgemeester.</string>
    <string name="start_next_DoN_event_description">Start de volgende %1$s.</string>
    <string name="lynch_event_description">Roep een stemming op voor de volgende lynching / brandstapel.</string>
    <string name="announce_dead_event_description_single">Er is deze nacht 1 slachtoffer gevallen!</string>
    <string name="announce_dead_event_description_plural">Er zijn deze nacht %1$d slachtoffers gevallen!</string>
    <string name="next_event">Volgende gebeurtenis.</string>
    <string name="day">dag</string>
    <string name="night">nacht</string>
    <string name="start_first_night">Start eerste nacht.</string>
    <string name="first_night_started">Eerste nacht gestart.</string>
    <string name="game_progress_text">Spelverloop</string>
    <string name="select_name_to">Selecteer iemand om %1$s</string>
    <string name="welcome_app_description">Deze app is bedoeld om vertellers van het spel \"Weerwolven van Wakkerdam\" te helpen tijdens een speelronde. Door onder andere de correcte volgorde van de rollen te laten zien op het relevante moment, kan de verteller zich focussen op zijn belangrijkste taak; het begeleiden van het spel. Deze app is daarmee vooral gericht op beginnende vertellers of voor vertellers die zich hebben laten overtuigen om een ingewikkeld spel te begeleiden met veel verschillende rollen en gebeurtenissen. Veel plezier!</string>
    <string name="werewolf_kill_event_description_single">De weerwolf kiest een slachtoffer.</string>
    <string name="werewolf_kill_event_description_plural">De weerwolven kiezen een slachtoffer.</string>
    <string name="witch_heal_event_description">De heks kiest of het slachtoffer tot leven wordt gewekt.</string>
    <string name="witch_kill_event_description">De heks kiest eventueel een slachtoffer.</string>
    <string name="seer_look_event_description">De ziener wordt wakker.</string>
    <string name="hunter_kill_event_description">De jager kiest een slachtoffer.</string>
    <string name="thief_switch_event_description">De dief wisselt zijn kaart.</string>
    <string name="cupid_affect_event_description">Cupido kiest de geliefden.</string>
    <string name="no_dead_tonight">Er zijn geen doden gevallen deze nacht!</string>
    <string name="name_select_header_elect_mayor">Wie wordt burgemeester?</string>
    <string name="name_select_header_lynch">Wie wordt er vandaag opgehangen / verbrand?</string>
    <string name="name_select_header_werewolf_kill_single">Wie wordt het slachtoffer van de weerwolf?</string>
    <string name="name_select_header_werewolf_kill_plural">Wie wordt het slachtoffer van de weerwolven?</string>
    <string name="name_select_header_witch_heal">Wil de heks het slachtoffer genezen?</string>
    <string name="name_select_header_witch_kill">Wil de heks eventueel nog iemand vermoorden?</string>
    <string name="name_select_header_seer_look">Van wie wil de ziener het kaartje zien?</string>
    <string name="name_select_header_hunter_kill">Wie neemt de jager mee in het graf?</string>
    <string name="name_select_header_cupid_affect">Wie worden de geliefden?</string>
    <string name="end_game_werewolf_win">Spel voorbij! De weerwolven hebben gewonnnen!</string>
    <string name="end_game_citizen_win">Spel voorbij! De burgers hebben gewonnen!</string>
    <string name="end_game_lovers_win">Spel voorbij! De liefde heeft overwonnen!</string>
    <string name="end_game_fluteplayer_win">Spel voorbij! De fluitspeler heeft gewonnen!</string>
    <string name="next_event_button_select_players_command">Selecteer spelers...</string>
    <string name="confirm">Bevestigen</string>
    <string name="select_single_player">Selecteer één van de onderstaande spelers en bevestig m.b.v knop onderaan.</string>
    <string name="select_player_2_way_choice">Selecteer %1$d of %2$d van de onderstaande speler(s) en bevestig m.b.v de knop onderaan.</string>
    <string name="select_player_fixed_number">Selecteer %1$d van de onderstaande speler(s) en bevestig m.b.v de knop onderaan.</string>
    <string name="nobody_to_select">Er zijn geen spelers die in aanmerking komen! Je zult moeten doen alsof er iets gebeurd...</string>
    <string name="placeholder_text">Dit is een placeholder.</string>
    <string name="two_extra_from_thief">+2 door Dief</string>
    <string name="in_game_card_choose_header">Welke van de volgende 2 rollen wil de dief aannemen?</string>
    <string name="select_role_to_switch_thief">Selecteer een kaart...</string>
    <string name="village_idiot_name">Dorpsgek</string>
    <string name="flute_player_name">Fluitspeler</string>
    <string name="savior_name">Genezer</string>
    <string name="village_elder_name">Dorpsoudste</string>
    <string name="scapegoat_name">Zondebok</string>
    <string name="name_select_header_flute_player_bewitch">Wie worden er deze nacht betoverd?</string>
    <string name="flute_player_bewitch_event_description">De fluitspeler kiest nieuwe betoverden</string>
    <string name="awake_bewitched_event_description">De betoverden worden wakker.</string>
</resources>
